fix: spacing on some larger screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1023,20 +1023,26 @@ h1 span {
 @media only screen and (min-width: 1000px) {
     .eventBox img{
         width: 600px;
+        margin-left: 1.5%;
+        margin-right: 1.5%
     }
 
     .eventDetails {
         width: 500px;
-    margin-left: 3%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
     }
 
     .description{
         width: 600px;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
     }
 
     .tickets {
         width: 500px;
-    margin-left: 3%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
     }
 
 
